# several-problems

./: .gitignore  AOC-2022-01A.rs  AOC-2022-01B.rs  AOC-2022-02A.rs  AOC-2022-02B.rs  AOC-2022-03A.rs  AOC-2022-03B.rs  AOC-2024-01A.clj  AOC-2024-01A.hs  AOC-2024-01A.rs  AOC-2024-01B.clj  AOC-2024-01B.hs  AOC-2024-01B.rs  AOC-2024-02A.hs  AOC-2024-02A.rs  AOC-2024-02B.hs  AOC-2024-03A.rs  AOC-2024-03B.rs  AOC-2024-04A.rs  AOC-2024-04B.rs  AOC-2024-05A.rs  AOC-2024-06A.rs  AOC-2024-07A.rs  AOC-2024-08A.rs  AOC-2024-08B.rs  AOC-2024-10A.rs  AOC-2024-10B.rs  AOC-2024-11A.rs  AOC-2024-11B.rs  AOC-2024-1A.rs  AOC-2024-1B.rs  AOC-2024-2B.rs  AOC-2024-3A.rs  AOC-2024-3B.rs  AOC-2024-5B.rs  AOC-2024-6A.rs  AOC-2024-6B.rs  AOC-2024-7A.rs  AOC-2024-7B.rs  AOC-2024-9A.rs  (+50 more)
files/: README.md.template  UVA-10002.input.extra  UVA-10003.input.extra  UVA-10004.input.extra  UVA-10005.input.extra  UVA-10006.output  UVA-10009.input.extra
