[package]
name = "several-problems"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "make"
path = "make.rs"

[[bin]]
name = "AOC-2024-1A"
path = "AOC-2024-1A.rs"

[[bin]]
name = "AOC-2024-1B"
path = "AOC-2024-1B.rs"

[[bin]]
name = "AOC-2024-2A"
path = "AOC-2024-2A.rs"

[[bin]]
name = "AOC-2024-2B"
path = "AOC-2024-2B.rs"

[[bin]]
name = "PE-1"
path = "PE-1.rs"

[[bin]]
name = "PE-21"
path = "PE-21.rs"

[[bin]]
name = "PE-22"
path = "PE-22.rs"

[[bin]]
name = "UVA-100"
path = "UVA-100.rs"
