[package]
name = "several-problems"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "make"
path = "make.rs"

[[bin]]
name = "AOC-2024-01A"
path = "AOC-2024-01A.rs"

[[bin]]
name = "AOC-2024-01B"
path = "AOC-2024-01B.rs"

[[bin]]
name = "AOC-2024-02A"
path = "AOC-2024-02A.rs"

[[bin]]
name = "AOC-2024-02B"
path = "AOC-2024-02B.rs"

[[bin]]
name = "AOC-2024-03A"
path = "AOC-2024-03A.rs"

[[bin]]
name = "AOC-2024-03B"
path = "AOC-2024-03B.rs"

[[bin]]
name = "AOC-2024-04A"
path = "AOC-2024-04A.rs"

[[bin]]
name = "AOC-2024-04B"
path = "AOC-2024-04B.rs"

[[bin]]
name = "AOC-2024-05A"
path = "AOC-2024-05A.rs"

[[bin]]
name = "AOC-2024-05B"
path = "AOC-2024-05B.rs"

[[bin]]
name = "AOC-2024-06A"
path = "AOC-2024-06A.rs"

[[bin]]
name = "AOC-2024-06B"
path = "AOC-2024-06B.rs"

[[bin]]
name = "AOC-2024-07A"
path = "AOC-2024-07A.rs"

[[bin]]
name = "AOC-2024-07B"
path = "AOC-2024-07B.rs"

[[bin]]
name = "AOC-2024-08A"
path = "AOC-2024-08A.rs"

[[bin]]
name = "AOC-2024-08B"
path = "AOC-2024-08B.rs"

[[bin]]
name = "AOC-2024-09A"
path = "AOC-2024-09A.rs"

[[bin]]
name = "AOC-2024-09B"
path = "AOC-2024-09B.rs"

[[bin]]
name = "AOC-2024-10A"
path = "AOC-2024-10A.rs"

[[bin]]
name = "AOC-2024-10B"
path = "AOC-2024-10B.rs"

[[bin]]
name = "AOC-2024-11A"
path = "AOC-2024-11A.rs"

[[bin]]
name = "AOC-2024-11B"
path = "AOC-2024-11B.rs"

[[bin]]
name = "PE-001"
path = "PE-001.rs"

[[bin]]
name = "PE-021"
path = "PE-021.rs"

[[bin]]
name = "PE-022"
path = "PE-022.rs"

[[bin]]
name = "UVA-100"
path = "UVA-100.rs"

[dependencies]
regex = "1.11.1"
